--- a/.pentadactylrc
+++ b/.pentadactylrc
@@ -26,7 +26,8 @@ map -b -m=normal <Leader>e f\
 map -b -m=normal <Leader>E F\
 map -b -m=normal <Leader>rc :source ~/.pentadactylrc<CR>:echo 'Configuration file sourced.'<CR>
 map -b -m=normal <Leader>d :bdelete!<Space>
-map -b -m=normal ! :tabopen<Space>duckduckgo<Space>!
+map -b -m=normal !t :tabopen<Space>duckduckgo<Space>!
+map -b -m=normal !o :open<Space>duckduckgo<Space>!
 map -b -m=normal -ex <Leader>h jumps
 map -b -m=normal -ex <Leader>/ set hlfind!
 map -b -m=normal -ex <Leader>ld downloads
